[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wcn-mesh"
version = "0.1.0"
description = "Tiny typed actor runtime for Python. Isolated actors, supervision trees, location-transparent addressing, at-least-once delivery, pluggable seams. Zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "WCN Development Co"}]
keywords = ["actor","concurrency","supervision","message-passing","distributed","runtime"]
classifiers = ["License :: OSI Approved :: MIT License","Programming Language :: Python :: 3","Operating System :: OS Independent","Intended Audience :: Developers","Topic :: Software Development :: Libraries","Topic :: System :: Distributed Computing"]

[project.urls]
Homepage = "https://github.com/WCN-DEV-CO/wcn-mesh"
